--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+html,
 body {
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
+h2{
+	color: Blue;
+	font-size=500%;
+	
+}
+h4{
+	
+	font-style: italic;
+	font-size = 50%;
+}
+.restart {
+	float:center;
+    cursor: pointer;
 }
